refactored project structure to enable re-using subnet code as a module

--- a/scripts/helpers/query_notebook.ipynb
+++ b/scripts/helpers/query_notebook.ipynb
@@ -20,8 +20,8 @@
    "source": [
     "# Import the necessary modules to demonstrate the validator\n",
     "import bittensor as bt\n",
-    "from llm_defender.base.protocol import LLMDefenderProtocol\n",
-    "from llm_defender.core.validators.validator import LLMDefenderValidator\n",
+    "from llm_defender.base.protocol importLLMDefender.SubnetProtocol\n",
+    "from llm_defender.core.validators.validator import SubnetValidator\n",
     "from argparse import ArgumentParser\n",
     "from llm_defender.base.utils import sign_data\n",
     "from torch import argmax, argmin, nonzero, masked_select\n",
@@ -60,7 +60,7 @@
     "\n",
     "\n",
     "# Setup Subnet validator\n",
-    "subnet_validator = LLMDefenderValidator(parser=parser)\n",
+    "subnet_validator = SubnetValidator(parser=parser)\n",
     "\n",
     "# Apply configuration\n",
     "subnet_validator.apply_config(bt_classes=[bt.subtensor, bt.logging, bt.wallet])\n",
@@ -267,13 +267,13 @@
     "        # Prepare the query. The query is signed and includes a nonce, to prevent replay of validator requests\n",
     "        nonce = token_hex(24)\n",
     "        timestamp = str(int(time()))\n",
-    "        signature = sign_data(\n",
+    "        signature = LLMDefender.sign_data(\n",
     "            hotkey=subnet_validator.wallet.hotkey,\n",
     "            data=f\"{synapse_uuid}{nonce}{subnet_validator.wallet.hotkey.ss58_address}{timestamp}\",\n",
     "        )\n",
     "        miner_res = await subnet_validator.dendrite(\n",
     "            normal_axon.axon_info,\n",
-    "            LLMDefenderProtocol(\n",
+    "           LLMDefender.SubnetProtocol(\n",
     "                analyzer=query[\"analyzer\"],\n",
     "                subnet_version=subnet_validator.subnet_version,\n",
     "                synapse_uuid=synapse_uuid,\n",
@@ -335,7 +335,7 @@
     "\n",
     "    nonce = token_hex(24)\n",
     "    timestamp = str(int(time()))\n",
-    "    signature = sign_data(\n",
+    "    signature = LLMDefender.sign_data(\n",
     "        hotkey=subnet_validator.wallet.hotkey,\n",
     "        data=f\"{synapse_uuid}{nonce}{timestamp}\",\n",
     "    )\n",
@@ -431,14 +431,14 @@
     "        # Prepare the query. The query is signed and includes a nonce, to prevent replay of validator requests\n",
     "        nonce = token_hex(24)\n",
     "        timestamp = str(int(time()))\n",
-    "        signature = sign_data(\n",
+    "        signature = LLMDefender.sign_data(\n",
     "            hotkey=subnet_validator.wallet.hotkey,\n",
     "            data=f\"{synapse_uuid}{nonce}{subnet_validator.wallet.hotkey.ss58_address}{timestamp}\",\n",
     "        )\n",
     "\n",
     "        miner_res = await subnet_validator.dendrite(\n",
     "            demo_axon.axon_info,\n",
-    "            LLMDefenderProtocol(\n",
+    "           LLMDefender.SubnetProtocol(\n",
     "                analyzer=query[\"analyzer\"],\n",
     "                subnet_version=subnet_validator.subnet_version,\n",
     "                synapse_uuid=synapse_uuid,\n",
